bin_PROGRAMS = server

server_SOURCES = \
	src/main.c \
	src/async_listener.c \
	src/async_reader.c \
	src/channel.c \
	src/executor.c \
	src/io_queue.c \
	src/io_selector.c \
	src/spawner.c \
	src/task.c \
	src/wakers.c \
	src/futures/accept.c \
	src/futures/echo.c \
	src/futures/readline.c \
	src/futures/server.c
