bin_PROGRAMS = server

server_SOURCES = \
	src/main.c \
	src/future.c \
	src/io/async_listener.c \
	src/io/async_reader.c \
	src/scheduler/channel.c \
	src/scheduler/executor.c \
	src/scheduler/io_queue.c \
	src/scheduler/io_selector.c \
	src/scheduler/spawner.c \
	src/scheduler/task.c \
	src/scheduler/wakers.c \
	src/futures/accept.c \
	src/futures/echo.c \
	src/futures/readline.c \
	src/futures/server.c

